--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,9 @@ jobs:
         name: lib
         path: lib
 
-
   test:
     runs-on: ubuntu-latest
+    needs: [build]
     strategy:
       matrix:
         node: [ '6', '8', '10', '12' ]
