--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,12 @@
 name: Build & Test
 
 on:
-  - pull_request:
+  pull_request:
+    branches:
       - master
       - next
       - beta
+      - alpha
       - release/*
 
 jobs:
