chore: prepare for initial release

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,6 @@
     "@typescript-eslint/no-explicit-any": ["off"],
     "@typescript-eslint/no-use-before-define": ["off"]
   },
-  "ignorePatterns": ["lib/**"]
+  "ignorePatterns": ["lib/**"],
+  "noInlineConfig": false
 }
