--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stateful-preferences",
+  "name": "dotpref",
   "version": "0.0.0-development",
   "description": "Manage CLI application encrypted preferences in a stateful way.",
   "main": "lib/index.js",
@@ -18,18 +18,25 @@
     "@types/node": "^13.13.4",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "@types/onetime": "^4.0.0",
+    "@types/pkg-up": "^3.1.0",
+    "@types/write-file-atomic": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.5.2",
     "prettier": "^2.0.5",
+    "semantic-release": "^17.0.7",
     "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3",
-    "semantic-release": "^17.0.7"
+    "typescript": "^3.8.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mem": "^6.1.0",
+    "pkg-up": "^3.1.0",
+    "write-file-atomic": "^3.0.3"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cassels/stateful-preferences.git"
+    "url": "https://github.com/cassels/dotpref.git"
   }
 }
