--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
   "include": ["./src/**/*.tsx", "./src/**/*.ts"],
   "exclude": [
     "lib",
+    "it",
+    "test",
     "node_modules",
     "**/__*__/**",
     "./src/**/*.spec.tsx",
