--- a/.releaserc
+++ b/.releaserc
@@ -1,2 +1,11 @@
 branches:
   - master
+plugins:
+- - "@semantic-release/commit-analyzer"
+  - releaseRules:
+    - type: docs
+      scope: README
+      release: patch
+- "@semantic-release/release-notes-generator"
+- "@semantic-release/npm"
+- "@semantic-release/git"
