--- a/.releaserc
+++ b/.releaserc
@@ -8,4 +8,4 @@ plugins:
       release: patch
 - "@semantic-release/release-notes-generator"
 - "@semantic-release/npm"
-- "@semantic-release/git"
+- "@semantic-release/github"
