chore: remove node 8 integration test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        node: ['8', '10', '12', '14']
+        node: ['10', '12', '14']
     name: Integration Test on Node ${{ matrix.node }}
     steps:
       - name: Setup node
