--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "mem": "^6.1.0",
+    "mem": "^8.1.1",
     "pkg-up": "^3.1.0",
     "write-file-atomic": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=10"
   },
   "repository": {
     "type": "git",
