chore: update releaserc
Update of semantic release rules to enable a patch release when a dependency is updated.

--- a/.releaserc
+++ b/.releaserc
@@ -6,6 +6,9 @@ plugins:
     - type: docs
       scope: README
       release: patch
+    - type: chore
+      scope: deps
+      release: patch
 - "@semantic-release/release-notes-generator"
 - "@semantic-release/npm"
 - "@semantic-release/github"
