--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,10 @@ on:
 
 jobs:
   build:
-    name: Build & Test
+    strategy:
+      matrix:
+        node: ['10', '12', '14']
+    name: Lint/Test/Build on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,9 +37,12 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
-      - name: Unit Test
+      - name: Lint
+        run: yarn lint
+
+      - name: Test
         run: yarn test
 
       - name: Build
@@ -47,23 +53,3 @@ jobs:
         with:
           name: lib
           path: lib
-
-  test:
-    runs-on: ubuntu-latest
-    needs: [build]
-    strategy:
-      matrix:
-        node: ['10', '12', '14']
-    name: Integration Test on Node ${{ matrix.node }}
-    steps:
-      - name: Setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: Download lib
-        uses: actions/download-artifact@v1
-        with:
-          name: lib
-
-      - run: ls lib
