--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll --no-coverage",
+    "lint": "eslint src",
     "build": "yarn clean && tsc",
     "build:watch": "tsc --watch ",
     "clean": "rm -rf lib",
@@ -42,13 +43,13 @@
     "@types/onetime": "^4.0.0",
     "@types/pkg-up": "^3.1.0",
     "@types/write-file-atomic": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.2",
-    "prettier": "^2.1.2",
+    "prettier": "^2.4.1",
     "semantic-release": "^17.1.2",
     "ts-jest": "^27.0.5",
     "typescript": "^4.0.3"
