--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # Build and test when pull request is made to protected branches.
 # This workflow will run integration tests against multiple versions of Node.
 
-name: Lint/Test/Build
+name: Continuous Integration
 
 on:
   pull_request:
@@ -13,37 +13,41 @@ on:
       - release/*
 
 jobs:
-  build:
+  lint:
     strategy:
       matrix:
         node: ['10', '12', '14', '16']
-    name: on Node ${{ matrix.node }}
+    name: Lint on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Cache node_modules
-        uses: actions/cache@v1
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install Dependencies
-        run: yarn install --immutable
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Lint
         run: yarn lint
 
+  test:
+    strategy:
+      matrix:
+        node: ['10', '12', '14', '16']
+    name: Test on Node ${{ matrix.node }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/actions/setup
+
       - name: Test
         run: yarn test
+
+  build:
+    strategy:
+      matrix:
+        node: ['10', '12', '14', '16']
+    name: Build on Node ${{ matrix.node }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Build
         run: yarn build
