--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,9 @@ jobs:
     name: Lint on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Setup
         uses: ./.github/actions/setup
 
@@ -33,6 +36,9 @@ jobs:
     name: Test on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Setup
         uses: ./.github/actions/setup
 
@@ -46,6 +52,9 @@ jobs:
     name: Build on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Setup
         uses: ./.github/actions/setup
 
