--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Build
         run: yarn build
@@ -40,7 +45,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Download lib
         uses: actions/download-artifact@v1
