--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Lint
         run: yarn lint
@@ -40,7 +45,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Test
         run: yarn test
@@ -56,7 +66,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Build
         run: yarn build
