--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
   lint:
     strategy:
       matrix:
-        node: ['10', '12', '14', '16']
+        node: ['12', '14', '16']
     name: Lint on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
@@ -37,7 +37,7 @@ jobs:
   test:
     strategy:
       matrix:
-        node: ['10', '12', '14', '16']
+        node: ['12', '14', '16']
     name: Test on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
@@ -58,7 +58,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node: ['10', '12', '14', '16']
+        node: ['12', '14', '16']
     name: Build on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
