--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
   lint:
     strategy:
       matrix:
-        node: ['10', '12', '14', '16']
+        node: ['12', '14', '16']
     name: Lint on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
@@ -24,7 +24,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Lint
         run: yarn lint
@@ -32,7 +37,7 @@ jobs:
   test:
     strategy:
       matrix:
-        node: ['10', '12', '14', '16']
+        node: ['12', '14', '16']
     name: Test on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
@@ -40,7 +45,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Test
         run: yarn test
@@ -48,7 +58,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node: ['10', '12', '14', '16']
+        node: ['12', '14', '16']
     name: Build on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
@@ -56,7 +66,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - run: yarn install
 
       - name: Build
         run: yarn build
