chore(renovate): add dependencies label to PRs

--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     ":automergeDisabled",
     ":preserveSemverRanges",
     "schedule:earlyMondays",
+    ":label(dependencies)"
     "group:monorepos",
     "group:recommended",
     "workarounds:all"
