chore(renovate): fix broken json
Close #224

--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
     ":automergeDisabled",
     ":preserveSemverRanges",
     "schedule:earlyMondays",
-    ":label(dependencies)"
+    ":label(dependencies)",
     "group:monorepos",
     "group:recommended",
     "workarounds:all"
