chore(renovate): group tools and disable engines
- Group linters and group linters
- Disable engines as this should be manual

--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,8 @@
     ":prConcurrentLimitNone",
     "group:monorepos",
     "group:recommended",
+    "group:linters",
+    "group:testNonMajor",
     "workarounds:all",
     "npm:unpublishSafe"
   ],
@@ -30,6 +32,12 @@
       ],
       "semanticCommitType": "chore",
       "semanticCommitScope": "deps"
+    },
+    {
+      "matchDepTypes": [
+        "engines"
+      ],
+      "enabled": false
     }
   ]
 }
