--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
   lint:
     strategy:
       matrix:
-        node: ['12', '14', '16']
+        node: ['16']
     name: Lint on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
