chore(renovate): automerge minor

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,7 @@
     ":dependencyDashboard",
     ":ignoreUnstable",
     ":updateNotScheduled",
-    ":automergeDisabled",
+    ":automergeMinor",
     ":npm",
     ":label(dependencies)",
     ":enableVulnerabilityAlertsWithLabel(security)",
