chore(release): adding dry-run flag for gh actions

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "yarn clean && tsc",
     "build:watch": "tsc --watch ",
     "clean": "rm -rf lib",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release --dry-run=$SEMANTIC_RELEASE_DRYRUN"
   },
   "keywords": [
     "pref",
