--- a/.releaserc
+++ b/.releaserc
@@ -1,14 +1,17 @@
 branches:
   - master
 plugins:
-- - "@semantic-release/commit-analyzer"
-  - releaseRules:
-    - type: docs
-      scope: README
-      release: patch
-    - type: chore
-      scope: deps
-      release: patch
-- "@semantic-release/release-notes-generator"
-- "@semantic-release/npm"
-- "@semantic-release/github"
+  - - '@semantic-release/commit-analyzer'
+    - releaseRules:
+        - type: docs
+          scope: README
+          release: patch
+        - type: chore
+          scope: deps
+          release: patch
+        - type: chore
+          scope: release
+          release: patch
+  - '@semantic-release/release-notes-generator'
+  - '@semantic-release/npm'
+  - '@semantic-release/github'
