--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,3 +62,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          SEMANTIC_RELEASE_DRYRUN: ${{ secrets.SEMANTIC_RELEASE_DRYRUN }}
