chore(workflows): add check for existence of files
- Add GitHub action for checking the existence of files after build. This should help prevent a scenario where the build fails silently. Inspired by #294.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,3 +75,9 @@ jobs:
 
       - name: Build
         run: yarn build
+        
+      - name: Check Files  
+        uses: JJ/files-present-action@releases/v1
+        with:
+          files: "package.json, LICENSE, README.md, lib, lib/index.js, lib/index.d.ts"
+
