--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,5 +79,5 @@ jobs:
       - name: Check Files  
         uses: JJ/files-present-action@releases/v1
         with:
-          files: "package.json, LICENSE, README.md, lib, lib/index.js, lib/index.d.ts"
+          files: "package.json, LICENSE, README.md, lib, lib/index.js, lib/index.d.ts, foo"
 
