--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,9 +75,8 @@ jobs:
 
       - name: Build
         run: yarn build
-        
-      - name: Check Files  
+
+      - name: Check Files
         uses: JJ/files-present-action@releases/v1
         with:
-          files: "package.json, LICENSE, README.md, lib, lib/index.js, lib/index.d.ts"
-
+          files: 'package.json, LICENSE, README.md, lib, lib/index.js, lib/index.d.ts'
