--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,9 +53,10 @@ jobs:
       - run: yarn install
 
       - name: Download lib
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: lib
+          path: lib
 
       - name: Check Files
         uses: JJ/files-present-action@releases/v1
